--- a/agent/index.html
+++ b/agent/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>go.contrastsecurity.com/agent</title>
-<meta name="go-import" content="go.contrastsecurity.com/agent git https://github.com/Contrast-Security-Inc/go-agent">
-<meta name="go-source" content="go.contrastsecurity.com/agent https://github.com/Contrast-Security-Inc/go-agent https://github.com/Contrast-Security-Inc/go-agent/tree/master{/dir} https://github.com/Contrast-Security-Inc/go-agent/blob/master{/dir}/{file}#L{line}">
+<title>go.contrastsecurity.dev/agent</title>
+<meta name="go-import" content="go.contrastsecurity.dev/agent git https://github.com/Contrast-Security-Inc/go-agent">
+<meta name="go-source" content="go.contrastsecurity.dev/agent https://github.com/Contrast-Security-Inc/go-agent https://github.com/Contrast-Security-Inc/go-agent/tree/master{/dir} https://github.com/Contrast-Security-Inc/go-agent/blob/master{/dir}/{file}#L{line}">
 <style>
 * { font-family: sans-serif; }
 body { margin-top: 0; }
@@ -15,10 +15,10 @@ ul { margin-top: 16px; margin-bottom: 16px; }
 </head>
 <body>
 <div class="content">
-<h2>go.contrastsecurity.com/agent</h2>
-<code>go get go.contrastsecurity.com/agent</code>
-<code>import "go.contrastsecurity.com/agent"</code>
-Home: <a href="https://godoc.org/go.contrastsecurity.com/agent">https://godoc.org/go.contrastsecurity.com/agent</a><br/>
+<h2>go.contrastsecurity.dev/agent</h2>
+<code>go get go.contrastsecurity.dev/agent</code>
+<code>import "go.contrastsecurity.dev/agent"</code>
+Home: <a href="https://godoc.org/go.contrastsecurity.dev/agent">https://godoc.org/go.contrastsecurity.dev/agent</a><br/>
 Source: <a href="https://github.com/Contrast-Security-Inc/go-agent">https://github.com/Contrast-Security-Inc/go-agent</a><br/>
 </div>
 </body>
