--- a/contrast-service/index.html
+++ b/contrast-service/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>go.contrastsecurity.com/contrast-service</title>
-<meta name="go-import" content="go.contrastsecurity.com/contrast-service git https://github.com/Contrast-Security-Inc/contrast-service">
-<meta name="go-source" content="go.contrastsecurity.com/contrast-service https://github.com/Contrast-Security-Inc/contrast-service https://github.com/Contrast-Security-Inc/contrast-service/tree/master{/dir} https://github.com/Contrast-Security-Inc/contrast-service/blob/master{/dir}/{file}#L{line}">
+<title>go.contrastsecurity.dev/contrast-service</title>
+<meta name="go-import" content="go.contrastsecurity.dev/contrast-service git https://github.com/Contrast-Security-Inc/contrast-service">
+<meta name="go-source" content="go.contrastsecurity.dev/contrast-service https://github.com/Contrast-Security-Inc/contrast-service https://github.com/Contrast-Security-Inc/contrast-service/tree/master{/dir} https://github.com/Contrast-Security-Inc/contrast-service/blob/master{/dir}/{file}#L{line}">
 <style>
 * { font-family: sans-serif; }
 body { margin-top: 0; }
@@ -15,10 +15,10 @@ ul { margin-top: 16px; margin-bottom: 16px; }
 </head>
 <body>
 <div class="content">
-<h2>go.contrastsecurity.com/contrast-service</h2>
-<code>go get go.contrastsecurity.com/contrast-service</code>
-<code>import "go.contrastsecurity.com/contrast-service"</code>
-Home: <a href="https://godoc.org/go.contrastsecurity.com/contrast-service">https://godoc.org/go.contrastsecurity.com/contrast-service</a><br/>
+<h2>go.contrastsecurity.dev/contrast-service</h2>
+<code>go get go.contrastsecurity.dev/contrast-service</code>
+<code>import "go.contrastsecurity.dev/contrast-service"</code>
+Home: <a href="https://godoc.org/go.contrastsecurity.dev/contrast-service">https://godoc.org/go.contrastsecurity.dev/contrast-service</a><br/>
 Source: <a href="https://github.com/Contrast-Security-Inc/contrast-service">https://github.com/Contrast-Security-Inc/contrast-service</a><br/>
 </div>
 </body>
